--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="text">Moon <span>Tourism</span> </div>
                     
                     <p>The first civilian mission to the Moon is plan to take place in 2023. The Rocket developed by Elon Musk's SpaceX will make a week-long journey to the Moon and back. In 2018, Japanese entrepreneur Yusaku Maezawa purchased all the seats aboard this rocket. Wishing to give as many talemnted individuals as possible the opportunity to go, he announced in March 2021 his plans to choose 8 crew members from across the world.</p>
-                    <a href="#">Read More</a>
+                    <a href="https://en.wikipedia.org/wiki/Tourism_on_the_Moon">Read More</a>
                 </div>
             </div>
         </div>
@@ -71,8 +71,8 @@
                 <iframe width="500" height="350" src="https://www.youtube.com/embed/h_L3wLmrMuA" title="【8 crew members wanted】dearMoon -  Special Message from MZ & Elon" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"
                
             </div>
-                <div class="column right">
-                    <div id="contentframe" style="position:relative; top: 0rem; left: 85px;">
+                <div class="column-right">
+                    <!-- <div id="contentframe" style="position:relative; top: 0rem; left: 85px;"> -->
                     <iframe width="500" height="350" src="https://www.youtube.com/embed/2iSZMv64wuU" title="NASA | Tour of the Moon" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 </div>
@@ -87,7 +87,7 @@
                <div class="card">
                    <div class="box">
                     <i class="fa-solid fa-rocket"></i>
-                       <div class="text">SpaceShip</div>
+                       <div class="text">Space Ship</div>
                        <img src="spaceship.PNG"width="290" height="300" alt="">
                     </div>
                </div>
@@ -115,7 +115,7 @@
          <section class="time" id="time">
             <div class="max-width">
                 <h2 class="title">Schedule</h2>
-                <img src="schedule_1_pc.png" width="1200" height="600" alt="">
+                <img src="schedule_1_pc.png" width="1100" height="600" alt="">
                 <div class="about-content">
                     <div class="column left">
                 </div>
@@ -129,7 +129,7 @@
         </section> 
          <!--footer section-->
     <footer>
-        <span>Created By <a href="https://sk3180.github.io/Portfolio/">Sachin Kumar Singh</a> | <span class="far fa-copyright"></span>2022 All rights reserved </span>
+        <span>Created By <a href=https://in.linkedin.com/in/sachin-kumar-singh-2999a2240?trk=people-guest_people_search-card>Sachin Kumar Singh</a> | <span class="far fa-copyright"></span>2022 All rights reserved </span>
     </footer>
 
     <script src="main.js"></script>
