--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Moon Tripz</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -71,7 +72,7 @@
                 <iframe width="500" height="350" src="https://www.youtube.com/embed/h_L3wLmrMuA" title="【8 crew members wanted】dearMoon -  Special Message from MZ & Elon" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"
                
             </div>
-                <div class="column-right">
+                <div class="column right">
                     <!-- <div id="contentframe" style="position:relative; top: 0rem; left: 85px;"> -->
                     <iframe width="500" height="350" src="https://www.youtube.com/embed/2iSZMv64wuU" title="NASA | Tour of the Moon" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
