--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="#about" class="menu-btn">Videos</a></li>
                 <li><a href="#suit" class="menu-btn">StarShip & The Suit</a></li>
                 <li><a href="#time" class="menu-btn">Schedule</a></li>
+                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScRkf5wn-ZGHpAuBD6LQ7gg8cT9Ix2Qg2625S32uA9kC6RP3A/viewform?usp=sf_link" class="menu-btn">Book Now</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
